src/objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Previewed_TCB__c</fullName>
        <description>Total Contracted Billing returned from previewing the quote in Zuora</description>
        <inlineHelpText>Total Contracted Billing returned from previewing the quote in Zuora</inlineHelpText>
        <label>TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_TCV__c</fullName>
        <description>TCV value which is got by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Tax__c</fullName>
        <description>Tax which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Tax which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Previewed_Total__c</fullName>
        <description>Total which is got by previewing the quote from Zuora</description>
        <inlineHelpText>Total which is got by previewing the quote from Zuora.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a Primary Quote attached to an Opportunity.</description>
        <inlineHelpText>Identifies a Primary Quote attached to an Opportunity.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProcessPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to control whether the payment will be processed with current quote when the quote is sent to Zuora.</description>
        <inlineHelpText>The flag to control whether the payment will be processed with current quote when the quote is sent to Zuora.</inlineHelpText>
        <label>Process Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ProductSelectorVersion__c</fullName>
        <formula>TEXT(zqu__ZuoraConfig__r.zqu__ProductSelectorVersion__c)</formula>
        <label>ProductSelector Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteBusinessType__c</fullName>
        <description>Quote Business Type.</description>
        <inlineHelpText>Quote Business Type.</inlineHelpText>
        <label>Quote Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Downsell</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote template that is used to generate the Quote PDF or Word document.</description>
        <inlineHelpText>The Quote template that will be used to generate the Quote PDF or Word document.  If not selected, the user will select a quote template from a list of available quote templates when creating Quote PDF or Word document.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>zqu__Quote_Template__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RampFrequency__c</fullName>
        <description>Specifies how often products added to the Quote should be ramped.</description>
        <inlineHelpText>Specifies how often products added to the Quote should be ramped.</inlineHelpText>
        <label>Ramp Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Specific Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__RecordReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is allowed to edit the Quote record according to Zuora Config</description>
        <inlineHelpText>If it is allowed to edit the Quote record according to Zuora Config</inlineHelpText>
        <label>RecordReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalSetting__c</fullName>
        <description>Specifies whether a termed subscription will remain termed or change to evergreen when it is renewed.</description>
        <inlineHelpText>Specifies whether a termed subscription will remain termed or change to evergreen when it is renewed.</inlineHelpText>
        <label>Renewal Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalTermPeriodType__c</fullName>
        <description>The period type for the subscription renewal term.</description>
        <inlineHelpText>The option to determine which period type to use for the subscription renewal term.</inlineHelpText>
        <label>Renewal Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__RenewalTerm__c</fullName>
        <description>The Renewal Term of the Quote.</description>
        <inlineHelpText>The Renewal Term of the Quote.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Service_Activation_Date__c</fullName>
        <inlineHelpText>Service Activation Date should be on or after Start Date and cannot be after Customer Acceptance Date.
If Service Activation Date is not required in Zuora, the Start Date will be used as the Service Activation Date.</inlineHelpText>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SoldToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is sold to for this Quote.</description>
        <inlineHelpText>The Contact that is sold to for this Quote.</inlineHelpText>
        <label>Sold to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Ship to Contact)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificRampFrequency__c</fullName>
        <description>Customizes how often products on the Quote should be ramped. This field is required if you set Ramp Frequency to &apos;Specific Months&apos;</description>
        <inlineHelpText>Customizes how often products on the Quote should be ramped. This field is required if you set Ramp Frequency to &apos;Specific Months&apos;</inlineHelpText>
        <label>Specific Ramp Frequency</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__StartDate__c</fullName>
        <description>The Date that the Quote Starts.</description>
        <inlineHelpText>The Date that the Quote Starts.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The Status of the Quote.</description>
        <inlineHelpText>The Status of the Quote.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent to Z-Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__StoreProductsJobId__c</fullName>
        <description>The job id for storing original products for Amendment and Renewal.</description>
        <label>Store Products Job Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionName__c</fullName>
        <description>The name of the subscription.</description>
        <label>Subscription Name (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermEndDate__c</fullName>
        <description>Only for Amendment quotes, contains the term end date of the base subscription</description>
        <inlineHelpText>The term end date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermStartDate__c</fullName>
        <description>The term start date of the subscription is amendment on, only used for amendment Quote</description>
        <inlineHelpText>The term start date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionType__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Amend Subscription</fullName>
                </value>
                <value>
                    <fullName>Renew Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionVersion__c</fullName>
        <description>This is the version of the subscription</description>
        <label>Subscription Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Name__c</fullName>
        <formula>IF( zqu__Hidden_Subscription_Name__c != &apos;&apos;,  zqu__Hidden_Subscription_Name__c ,  zqu__SubscriptionName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Term_Type__c</fullName>
        <inlineHelpText>Subscription Term Type determines whether its Termed or Evergreen. If Evergreen is chosen, then Initial Term and Renewal Term will be set to 0 and Auto Renew will be unchecked. Also, blank value means Quote is created with Termed Subscription Type.</inlineHelpText>
        <label>Subscription Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__TCBTax__c</fullName>
        <description>Tax on Total Contracted Billing returned from previewing the quote in Zuora</description>
        <inlineHelpText>Tax on Total Contracted Billing returned from previewing the quote in Zuora</inlineHelpText>
        <label>TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <label>TCV (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__TCVForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptEffectiveDate__c</fullName>
        <label>Tax Exempt Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptExpirationDate__c</fullName>
        <label>Tax Exempt Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Tax__c</fullName>
        <description>The amount of Tax for the Quote.</description>
        <inlineHelpText>The amount of Tax for the Quote.</inlineHelpText>
        <label>Tax(Deprecated)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Terms__c</fullName>
        <description>Special Terms and Notes for the Quote.</description>
        <inlineHelpText>Special Terms and Notes for the Quote.</inlineHelpText>
        <label>Special Terms and Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total(Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__Total__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ValidUntil__c</fullName>
        <description>The Date that the Quote is Valid until.</description>
        <inlineHelpText>The Date that the Quote is Valid until.</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraAccountID__c</fullName>
        <label>Zuora Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraEntityId__c</fullName>
        <label>Zuora Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraInvoiceNumber__c</fullName>
        <label>Zuora Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountId__c</fullName>
        <label>Zuora Parent Billing Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountName__c</fullName>
        <label>Zuora Parent Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraPaymentID__c</fullName>
        <label>Zuora Payment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraPaymentNumber__c</fullName>
        <label>Zuora Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraSubscriptionID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Subscription ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__ZuoraSubscriptionNumber__c</fullName>
        <label>Zuora Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Zuora_Account_Number__c</fullName>
        <label>Zuora Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Quote_Validation_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__All_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__SubscriptionType__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>zqu__AutoRenew__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Amendment_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Amend Subscription</value>
        </filters>
        <label>Amendment Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Cancellation_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__CancellationDate__c</columns>
        <columns>zqu__CancellationEffectiveDate__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Cancel Subscription</value>
        </filters>
        <label>Cancellation Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__New_Subscription_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__PaymentMethod__c</columns>
        <columns>zqu__Previewed_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Related_Billing_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>New Subscription</value>
        </filters>
        <label>New Subscription Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Renewal_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Renew Subscription</value>
        </filters>
        <label>Renewal Quotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>zqu__Amendment</fullName>
        <active>true</active>
        <description>Record Type for Amendment Quote, assigned with Amendment Page Layout</description>
        <label>Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Amendment_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for amend Subscription Quote after sent to Zuora, assigned with Amendment Read Only Page Layout</description>
        <label>Amendment ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <description>Record Type for Quote Default, assigned with Quote Default Page Layout</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for New Subscription Quote after sent to Zuora, assigned with Quote Read Only Page Layout</description>
        <label>ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal</fullName>
        <active>true</active>
        <description>Record Type for Quote Renewal, assigned with Renewal Page Layout</description>
        <label>Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for renew subscription Quote after sent to Zuora, assigned with Renewal Read Only Page Layout</description>
        <label>Renewal ReadOnly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zqu__ValidateCustomerAcceptanceDate</fullName>
        <active>true</active>
        <description>Validate whether Customer Acceptance Date is equal or after Service Activation Date</description>
        <errorConditionFormula>AND
     ( NOT ( ISNULL (   zqu__Customer_Acceptance_Date__c   ) ),
       OR
           (
             zqu__Customer_Acceptance_Date__c &lt;   zqu__Service_Activation_Date__c,
             zqu__Customer_Acceptance_Date__c &lt;    zqu__StartDate__c
           )
     )</errorConditionFormula>
        <errorDisplayField>zqu__Customer_Acceptance_Date__c</errorDisplayField>
        <errorMessage>Customer Acceptance Date cannot be before Service Activation Date or Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateServiceActivationDate</fullName>
        <active>true</active>
        <description>Validate whether Service Activation Date is equal or after Start Date</description>
        <errorConditionFormula>AND
     ( NOT ( ISNULL (  zqu__Service_Activation_Date__c  ) ),
       zqu__Service_Activation_Date__c &lt;  zqu__StartDate__c
     )</errorConditionFormula>
        <errorDisplayField>zqu__Service_Activation_Date__c</errorDisplayField>
        <errorMessage>Service Activation Date cannot be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateSubscriptionTermedType</fullName>
        <active>true</active>
        <description>[Deprecated]</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>zqu__Subscription_Term_Type__c</errorDisplayField>
        <errorMessage>[Deprecated]</errorMessage>
    </validationRules>
</CustomObject>